--- a/Frontend/followup/pubspec.yaml
+++ b/Frontend/followup/pubspec.yaml
@@ -34,6 +34,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # 网络请求
+  http: ^1.1.0
+  
+  # 状态管理
+  provider: ^6.1.1
+  
+  # 本地存储
+  shared_preferences: ^2.2.2
+  
+  # 图片选择
+  image_picker: ^1.0.7
+  
+  # 文件操作
+  path_provider: ^2.1.2
+  
+  # Web 文件下载
+  universal_html: ^2.2.4
+  
+  # 日期格式化
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
